# nimpack

./: .README.md.kate-swp  .gitignore  .project  01_dijkstra_algorithm.js  01_fibonacci_memoization.ts  01_prototype_closure.js  02_minimax_alphabetapruning.ts  02_promise_generator.js  README.md  input.ts  nimpack  nimpack.nim  output.js  package.json  pypack  pyproject.toml  todolist.jsx
commands/: build.py  cli.py  create.py  dev.py
myjs/: index.html  package-lock.json  package.json
release/: nimpack
src/: cli.nim  nimpack.nim  sse_test  sse_test.nim
src/commands/: build.nim  create.nim  dev.nim
src/utils/: esbuild.nim  fsutils.nim  server.nim  watcher.nim
templates/js/: index.html
templates/js/src/: App.jsx
templates/reactts/: index.html
templates/ts/: index.html
templates/ts/src/: App.tsx
utils/: esbuild.py  fsutils.nim  server.py  tailwind.py  watcher.py
